# my-django-app

./: .env  .gitignore  Dockerfile  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
mysite/: db.sqlite3  log.txt  log.txt.1  shopapp-products-fuxtures.xml
mysite/blogapp/: models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/locale/en/LC_MESSAGES/: django.mo  django.po
mysite/locale/ru/LC_MESSAGES/: django.mo  django.po
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  base.html  register.html  user_detail.html  user_list.html  user_update.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: order-fixtures.json  products-fixtures.json  users-fixtures.json
mysite/shopapp/migrations/: 0007_alter_product_options.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview_image.py  0011_productimages.py  0012_alter_order_options_alter_product_options.py  0013_alter_product_description_alter_product_discount_and_more.py
mysite/shopapp/templates/admin/: csv_form.html
mysite/shopapp/templates/shopapp/: groups-list.html  (+13 more)
