[project]
name = "prod"
version = "0.1.0"
description = "module 20"
authors = [
    {name = "Jorathepoedatel"}
]

requires-python = ">=3.12"
dependencies = [
    "django (==6.0.6)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "asgiref (==3.11.1)",
    "attrs (==26.1.0)",
    "django-filter (==25.2)",
    "djangorestframework (==3.17.1)",
    "drf-spectacular (==0.29.0)",
    "gunicorn (==26.0.0)",
    "inflection (==0.5.1)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "packaging (==26.2)",
    "pillow (==12.2.0)",
    "pyyaml (==6.0.3)",
    "referencing (==0.37.0)",
    "rpds-py (==2026.5.1)",
    "sqlparse (==0.5.5)",
    "typing-extensions (==4.15.0)",
    "uritemplate (==4.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.14.1,<8.0.0)",
    "django-debug-toolbar (>=6.3.0,<7.0.0)",
    "django-stubs (>=6.0.5,<7.0.0)",
    "django-stubs-ext (>=6.0.5,<7.0.0)",
    "djangorestframework-stubs (>=3.17.0,<4.0.0)",
    "pyinstrument (>=5.1.2,<6.0.0)",
    "yappi (>=1.7.6,<2.0.0)",
    "types-pyyaml (>=6.0.12.20260518,<7.0.0.0)"
]
